Further updates related to aircraft reference data including type-ahead matching in edit flight view
